--- a/package.json
+++ b/package.json
@@ -9,19 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.4",
+    "@hello-pangea/dnd": "^16.5.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@mux/mux-node": "^7.3.5",
+    "@mux/mux-player-react": "^2.3.1",
+    "@prisma/client": "^5.8.1",
+    "@tanstack/react-table": "^8.11.6",
+    "@uploadthing/react": "^6.1.0",
+    "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
+    "lucide-react": "^0.312.0",
+    "mongodb": "^6.3.0",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "query-string": "^8.1.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
+    "recharts": "^2.10.4",
+    "stripe": "^14.12.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.1.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "prisma": "^5.8.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
