--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mux/mux-node": "^7.3.5",
     "@mux/mux-player-react": "^2.3.1",
+    "@planetscale/database": "^1.14.0",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -31,6 +32,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.312.0",
     "mongodb": "^6.3.0",
+    "mysql": "^2.18.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "query-string": "^8.1.0",
